@@ -1,3 +1,10 @@
+2002-08-08  Seth Nickell  <snickell@stanford.edu>
+
+	* capplets/Makefile.am:
+
+	Actually hook the windows capplet into the build. Though
+	its sort of ass right now.
+
 2002-08-08  Seth Nickell <snickell@stanford.edu>
 
 	Try my best to throw a monkey wrench in things. Checkin
